[gd_scene load_steps=10 format=3 uid="uid://nqgolpvgp7yg"]

[ext_resource type="Script" path="res://DTContainer/DT&PTContainer.gd" id="1_juoha"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sp6md"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.969137, 0.969137, 0.969137, 1)
corner_radius_top_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ts1y0"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.577008, 0.577008, 0.577008, 1)
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5tggx"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.847474, 0.847474, 0.847474, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qb31t"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(1, 1, 0.6, 1)
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rl1kt"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.933333, 0.733333, 1, 1)
corner_radius_bottom_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xj583"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.8, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ks3ld"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.8, 1, 0.8, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ox2pm"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(1, 0.8, 0.6, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="DT&PTContainer" type="HBoxContainer"]
offset_top = 732.0
offset_right = 240.0
offset_bottom = 732.0
theme_override_constants/separation = 50
script = ExtResource("1_juoha")

[node name="PTContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Operator&EnvContainer" type="VBoxContainer" parent="PTContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="OperatorPanel" type="PanelContainer" parent="PTContainer/Operator&EnvContainer"]
z_index = -1
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_sp6md")

[node name="OperatorOrganizer" type="HBoxContainer" parent="PTContainer/Operator&EnvContainer/OperatorPanel"]
layout_mode = 2

[node name="OperatorLabel" type="Label" parent="PTContainer/Operator&EnvContainer/OperatorPanel/OperatorOrganizer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Operator"

[node name="OperatorContainer" type="HBoxContainer" parent="PTContainer/Operator&EnvContainer/OperatorPanel/OperatorOrganizer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="ExperimentContainer" type="HBoxContainer" parent="PTContainer/Operator&EnvContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="EnvPanel" type="PanelContainer" parent="PTContainer/Operator&EnvContainer/ExperimentContainer"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ts1y0")

[node name="EnvOrganizer" type="HBoxContainer" parent="PTContainer/Operator&EnvContainer/ExperimentContainer/EnvPanel"]
layout_mode = 2

[node name="EnvLabel" type="Label" parent="PTContainer/Operator&EnvContainer/ExperimentContainer/EnvPanel/EnvOrganizer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "System environ."

[node name="EnvContainer" type="HBoxContainer" parent="PTContainer/Operator&EnvContainer/ExperimentContainer/EnvPanel/EnvOrganizer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6

[node name="SystemPanel" type="PanelContainer" parent="PTContainer/Operator&EnvContainer/ExperimentContainer"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_5tggx")

[node name="SystemOrganizer" type="HBoxContainer" parent="PTContainer/Operator&EnvContainer/ExperimentContainer/SystemPanel"]
layout_mode = 2

[node name="SystemLabel" type="Label" parent="PTContainer/Operator&EnvContainer/ExperimentContainer/SystemPanel/SystemOrganizer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "System
"

[node name="SystemContainer" type="HBoxContainer" parent="PTContainer/Operator&EnvContainer/ExperimentContainer/SystemPanel/SystemOrganizer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6

[node name="DataTravelContainer" type="VBoxContainer" parent="PTContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MachinePanel" type="PanelContainer" parent="PTContainer/DataTravelContainer"]
z_index = -1
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_qb31t")

[node name="MachineOrganizer" type="HBoxContainer" parent="PTContainer/DataTravelContainer/MachinePanel"]
layout_mode = 2

[node name="MachineLabel" type="Label" parent="PTContainer/DataTravelContainer/MachinePanel/MachineOrganizer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Machine"

[node name="MachineContainer" type="HBoxContainer" parent="PTContainer/DataTravelContainer/MachinePanel/MachineOrganizer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6

[node name="DataOutPanel" type="PanelContainer" parent="PTContainer/DataTravelContainer"]
z_index = -1
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_rl1kt")

[node name="DataOutContainer" type="VBoxContainer" parent="PTContainer/DataTravelContainer/DataOutPanel"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="SensorsOrganizer" type="HBoxContainer" parent="PTContainer/DataTravelContainer/DataOutPanel/DataOutContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SensorsLabel" type="Label" parent="PTContainer/DataTravelContainer/DataOutPanel/DataOutContainer/SensorsOrganizer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Sensors"

[node name="SensorsContainer" type="HBoxContainer" parent="PTContainer/DataTravelContainer/DataOutPanel/DataOutContainer/SensorsOrganizer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="DataTransmittedOrganizer" type="HBoxContainer" parent="PTContainer/DataTravelContainer/DataOutPanel/DataOutContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DataTransmittedLabel" type="Label" parent="PTContainer/DataTravelContainer/DataOutPanel/DataOutContainer/DataTransmittedOrganizer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dara transmitted"

[node name="DataTransmittedContainer" type="HBoxContainer" parent="PTContainer/DataTravelContainer/DataOutPanel/DataOutContainer/DataTransmittedOrganizer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="DTContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="ServicesPanel" type="PanelContainer" parent="DTContainer"]
z_index = -1
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xj583")

[node name="ServicesOrganizer" type="HBoxContainer" parent="DTContainer/ServicesPanel"]
layout_mode = 2

[node name="ServicesLabel" type="Label" parent="DTContainer/ServicesPanel/ServicesOrganizer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Services"

[node name="ServicesContainer" type="HBoxContainer" parent="DTContainer/ServicesPanel/ServicesOrganizer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6

[node name="EnablersPanel" type="PanelContainer" parent="DTContainer"]
z_index = -1
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ks3ld")

[node name="EnablerOrganizer" type="HBoxContainer" parent="DTContainer/EnablersPanel"]
layout_mode = 2

[node name="EnablersLabel" type="Label" parent="DTContainer/EnablersPanel/EnablerOrganizer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Enablers"

[node name="EnablersContainer" type="HBoxContainer" parent="DTContainer/EnablersPanel/EnablerOrganizer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="ModelsDataPanel" type="PanelContainer" parent="DTContainer"]
z_index = -1
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ox2pm")

[node name="ModelsDataContainer" type="HBoxContainer" parent="DTContainer/ModelsDataPanel"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="ModelsLabel" type="Label" parent="DTContainer/ModelsDataPanel/ModelsDataContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Models
"

[node name="ModelsContainer" type="HBoxContainer" parent="DTContainer/ModelsDataPanel/ModelsDataContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="DataLabel" type="Label" parent="DTContainer/ModelsDataPanel/ModelsDataContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Datas"

[node name="DataContainer" type="HBoxContainer" parent="DTContainer/ModelsDataPanel/ModelsDataContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6
